# heavy_task_service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  mineru_tuning.py  paths.py
app/schemas/: task.py
app/services/: file_service.py  task_service.py
app/tasks/: catalog.py  mineru_pdf.py
app/workers/: celery_app.py
docs/: MinerU PDF 解析消费者接口修改要求.md  mineru-tuning.md  producer-interface.md
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
tests/: test_api.py  test_mineru_task.py
